testsuite/tests/roles/should_fail/Roles12a.hs
{-# LANGUAGE Haskell2010 #-}
module Roles12a where
import {-# SOURCE #-} Roles12
